--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -23,6 +23,7 @@
     <button id="create-note">Create Note</button>
 
     <script src="uuidv4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment-with-locales.min.js"></script>
     <script src="notes-functions.js"></script>
     <script src="notes-app.js"></script>
 </body>
