--- a/hangman/index.html
+++ b/hangman/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
-<body>
-    <p id="puzzle"></p>
-    <p id="guesses"></p>
-    <script src="hangman.js"></script>
-    <script src="app.js"></script>
-</body>
+  <head>
+    <title>Hangman</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" href="images/favicon.png">
+  </head>
+
+  <body>
+    <div>
+      <div id="puzzle" class="puzzle"></div>
+      <p id="guesses"></p>
+      <button id="reset" class="button">Reset</button>
+    </div>
+
+    <script src="scripts/request.js"></script>
+    <script src="scripts/hangman.js"></script>
+    <script src="scripts/app.js"></script>
+  </body>
 </html>
